--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1132,7 +1132,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .opc .buttons-set.disabled button.button { display:none; }
 .opc .buttons-set .please-wait { height:21px; line-height:21px; }
 
-.opc .step-title { background-color:#645967; padding:8px 15px; text-align:right; }
+.opc .step-title { /*background-color:#645967;*/ padding:8px 15px; text-align:right; }
 .opc .step-title .number { float:left; line-height:22px; margin-right:5px; }
 .opc .step-title h2 {text-align:left;font-size:2em; margin: 9px 0 -5px -14px; color:#431f4b;}
 .opc .step-title a { display:none; float:right; }
