--- a/app/design/frontend/base/default/template/checkout/onepage/review.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/review.phtml
@@ -24,6 +24,10 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+
+</section>
+<section style="width:45%; float:right;">
 <div class="order-review" id="checkout-review-load">
     <?php echo $this->getChildHtml('info') ?>
 </div>
+</section>
