--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -28,7 +28,7 @@
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 
-<section style="width:45%; float:right;">
+<section style="width:470px; float:left;">
 	
 <ol class="opc" id="checkoutSteps">
 <?php 
@@ -60,7 +60,7 @@ Contact KAM Technology at contact@kamtechco.net to activate the license</strong>
 		</ol>
 		</section>
 		
-		<section style="width:45%; float:right;">
+		<section style="width:470px; float:right;">
 	        <div class="step-title">
 	            <h2><?php echo $_stepInfo['label'] ?></h2>
 		    <a href="#"><?php echo $this->__('Edit') ?></a>
