--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1129,6 +1129,9 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .opc { border-bottom:1px solid #ddd; position:relative; }
 .opc li.section { border:1px solid #fff; border-bottom:0; }
 
+#checkoutStep1, #checkoutStep2 {display:inline-block;
+	width:470px;}
+
 .opc .buttons-set.disabled button.button { display:none; }
 .opc .buttons-set .please-wait { height:21px; line-height:21px; }
 
