--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1137,7 +1137,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 
 .section { width:470px; /*display:inline-block;*/}
 
-.opc .step-title { /*background-color:#645967;*/ padding:8px 15px; text-align:right; width:470px;}
+.opc .step-title { /*background-color:#645967;*/ padding:8px 15px; text-align:right;}
 
 li#opc-billing, #opc-shipping, #opc-shipping_method {
 	float: left !important;
