--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -111,7 +111,11 @@ jQuery(function ($) {
 
 	$('.remove-item').live('click', function () {
 
-		alert("CLICK");
+		var $parent	= $(this).closest('.item'),
+			count	= $('.product-details > table td:first > strong').text();
+
+		alert(count);
+
 
 	});
 
